--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.0",
+    "node-sass": "^4.11.0",
+    "popper.js": "^1.15.0",
+    "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^2.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
