--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "svg": "vsvg -s ./static/icons -t ./src/assets/icons"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
@@ -18,7 +19,9 @@
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-router": "^3.0.1",
+    "vue-svgicon": "^3.2.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
