--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gsap": "^2.1.2",
     "jquery": "^3.4.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.15.0",
+    "portal-vue": "^2.1.3",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
+    "scrollmagic": "^2.0.6",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
