--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "scrollmagic": "^2.0.6",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.0.1",
     "vue-svgicon": "^3.2.6"
   },
