--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+    "node": "10.3.0",
+    "npm": "6.x"
   },
   "browserslist": [
     "> 1%",
