--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "svg": "vsvg -s ./static/icons -t ./src/assets/icons",
-    "heroku-prebuild": "npm run build && npm install --dev"
+    "svg": "vsvg -s ./static/icons -t ./src/assets/icons"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
