--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
     "svg": "vsvg -s ./static/icons -t ./src/assets/icons",
+    "heroku-prebuild": "npm install --dev",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
