--- a/app.yaml
+++ b/app.yaml
@@ -12,9 +12,7 @@
 # limitations under the License.
 #
 # [START runtime]
-runtime: nodejs10
-api_version: 1
-threadsafe: true
+runtime: nodejs10.x
 handlers:
 - url: /(.*\.(js|css|png|jpg|svg|ttf))$
   static_files: dist/\1
