--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": "10.3.0",
+    "node": "10.x.x",
     "npm": "6.x"
   },
   "browserslist": [
