--- a/app.yaml
+++ b/app.yaml
@@ -12,7 +12,7 @@
 # limitations under the License.
 #
 # [START runtime]
-runtime: nodejs10.x
+runtime: nodejs10
 handlers:
 - url: /(.*\.(js|css|png|jpg|svg|ttf))$
   static_files: dist/\1
