--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.0.1",
-    "vue-svgicon": "^3.2.6"
+    "vue-svgicon": "^3.2.6",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
