--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "gsap": "^2.1.2",
     "jquery": "^3.4.0",
