--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "gsap": "^2.1.2",
     "jquery": "^3.4.0",
@@ -23,6 +24,7 @@
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
     "scrollmagic": "^2.0.6",
+    "vee-validate": "^2.2.10",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-line-clamp": "^1.3.2",
