--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
     "scrollmagic": "^2.0.6",
+    "vee-validate": "^2.2.10",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-line-clamp": "^1.3.2",
