--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
+    "server:start": "node server.js",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
     "svg": "vsvg -s ./static/icons -t ./src/assets/icons",
