--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -26,10 +26,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm i
     - run: npm run build --if-present
   
   deploy:
     runs-on: ubuntu-latest
+    needs: [ build ]
     steps:
       - name: GitHub Action for Vultr - vultr-cli
         uses: techknowlogick/action-vultr@v2.3.0
