--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "server:start": "node server.js",
+    "start:server": "node server.js",
+    "start:all": "npm run start && npm run start:server",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
     "svg": "vsvg -s ./static/icons -t ./src/assets/icons",
@@ -17,8 +18,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "gsap": "^2.1.2",
     "jquery": "^3.4.0",
+    "mailgun-js": "^0.22.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.15.0",
     "portal-vue": "^2.1.3",
@@ -55,8 +58,8 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
     "express": "^4.18.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
